--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ jedi==0.18.2
 Jinja2==3.1.2
 jupyter_client==8.2.0
 jupyter_core==5.3.0
+kaggle==1.5.13
 MarkupSafe==2.1.2
 matplotlib-inline==0.1.6
 nest-asyncio==1.5.6
@@ -32,11 +33,13 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.15.1
 python-dateutil==2.8.2
+python-slugify==8.0.1
 pytz==2023.3
 pyzmq==25.1.0
 requests==2.31.0
 six==1.16.0
 stack-data==0.6.2
+text-unidecode==1.3
 tornado==6.3.2
 tqdm==4.65.0
 traitlets==5.9.0
