--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ backcall==0.2.0
 branca==0.6.0
 certifi==2023.5.7
 charset-normalizer==3.1.0
+click==8.1.3
 comm==0.1.3
 debugpy==1.6.7
 decorator==5.1.1
@@ -14,12 +15,14 @@ ipykernel==6.23.1
 ipython==8.13.2
 jedi==0.18.2
 Jinja2==3.1.2
+joblib==1.2.0
 jupyter_client==8.2.0
 jupyter_core==5.3.0
 kaggle==1.5.13
 MarkupSafe==2.1.2
 matplotlib-inline==0.1.6
 nest-asyncio==1.5.6
+nltk==3.8.1
 numpy==1.24.3
 packaging==23.1
 pandas==2.0.2
@@ -36,6 +39,7 @@ python-dateutil==2.8.2
 python-slugify==8.0.1
 pytz==2023.3
 pyzmq==25.1.0
+regex==2023.5.5
 requests==2.31.0
 six==1.16.0
 stack-data==0.6.2
